--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pytza500"
-version = "2.0"
+version = "1.0"
 dependencies = [
   "ftd2xx==1.3.8",
 ]
@@ -66,7 +66,7 @@ classifiers = [
 ]
 
 [project.urls]
-Homepage = "https://artifex-engineering.com"
+Homepage = "https://artifex-engineering.com/measuring-instruments/transimpedance-amplifiers/tza500"
 Documentation = "https://github.com/artifex-engineering/pytza500/blob/main/README.md"
 Repository = "https://github.com/artifex-engineering/pytza500.git"
 Issues = "https://github.com/artifex-engineering/pytza500/issues"
